minimal theory of mind sent to mind and language final (i hope)

--- a/mindreading/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
+++ b/mindreading/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
@@ -91,7 +91,7 @@ And in much the way that irrelevant facts about the contents of others’ belief
 The variety of paradigms measures---looking time, anticipatory looking, pointing and helping---makes it hard to dismiss these findings on methodological grounds.
 And while some have proposed that infants might be tracking behaviour only \citet{en_1168, en_1169},
 this proposal faces several objections \citep[e.g.][]{Song:2008qo}.
-The core issue is not whether hypothetical behavioural strategies might in principle explain theory of mind abilities; it is whether all of these subjects’ actual behaviour reading capacities are flexible enough to explain the full range of their theory of mind abilities \citep[]{Apperly:2009ju}
+The core issue is not whether hypothetical behavioural strategies might in principle explain theory of mind abilities; it is whether all of these subjects’ actual behaviour reading capacities are flexible enough to explain the full range of their theory of mind abilities \citep[]{Apperly:2009ju}.
 In my view this is unlikely.
 So straightforward rejection of  (\ref{infant_fb}) is not an option.
 
@@ -159,7 +159,7 @@ But some Category B tasks involve language and communication
 \citep{Knudsen:2011fk,Song:2008qo}
 and there are non-verbal tasks in Category A
 (\citealp{Call:1999co}; \citealp{low:2010_preschoolers} Study 2).
-We should also note that children who fail Category A tasks can answer questions about perception or pretence that are word-for-word identical with the questions about false belief that they cannot answer correctly (\citealp{Gopnik:1994cb}; see also\citealp{Cluster:1996ht}).
+We should also note that children who fail Category A tasks can answer questions about perception or pretence that are word-for-word identical with the questions about false belief that they cannot answer correctly (\citealp{Gopnik:1994cb}; see also \citealp{Cluster:1996ht}).
 So the Extraneous Requirement cannot be straightforwardly linked to language or communication.
 There is a more general problem facing attempts to identify the Extraneous Requirement.
 There is much variation among the tasks in Category A.
@@ -168,7 +168,7 @@ It is also that some involve prediction whereas others involve retrodiction or j
 some concern the first-person perspective, whereas others involve a second- or third-person perspective \citep[e.g.][]{Gopnik:1991db},
 some involve interaction whereas in others the subject is a mere observer \citep[e.g.][]{Chandler:1989qa},
 and some involve prediction actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}.
-Despite all this variation and more, the Category A tasks all appear to measure a developmental transition \citep{Wellman:2001lz}.
+Despite all this variation and more, the Category A tasks all appear to measure a single developmental transition \citep{Wellman:2001lz}.
 This is a significant obstacle to identifying the Extraneous Requirement.
 In fact, my view the currently available evidence supports the conclusion that there is no Extraneous Requirement.
 And as far as I know the only plausible candidate for the transition  Category A tasks measure is a transition in the ability to represent beliefs.
