--- a/mindreading/minimal theory of mind (new version)/mind and language resubmit (accepted)/to_word/mtm.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/mind and language resubmit (accepted)/to_word/mtm.nv.tex
@@ -1,6 +1,3 @@
-%!TEX TS-program = xelatex
-%!TEX encoding = UTF-8 Unicode
-
 \def \papersize {a4paper}
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
@@ -14,7 +11,7 @@
 %\def \iemail{}
 %\date{}
 
-\input{$HOME/Documents/submissions/preamble_steve_paper2}
+\input{$HOME/Documents/submissions/preamble_steve_paper_ooxelatex}
 
 %avoid overhang
 \tolerance=5000
@@ -610,7 +607,7 @@ When the protagonist sees a ball appear from behind the screen and leave the sce
 
 
 Given this analysis, it is notable that one study already claims to have found positive evidence that infants can ascribe beliefs about identity. 
-Scott and Baillargeon (\citeyear{en_1690}) have already conducted experiments which aim to show that 18-month-old infants are able to represent beliefs involving mistakes about `which particular object \textit{token}' another is facing rather than only about `which \textit{type} of object' is present (p.\ 1179). However, while their aim is clearly relevant, we shall show that these experiments do not succeed in testing whether infants ascribe beliefs about identity.  In essence, their paradigm involves two types of object, a divisible penguin which affords hiding a key and an indivisible penguin which lacks this affordance.  The divisible penguin has two states, divided and whole.  When whole it is visually indistinguishable from the indivisible penguin which does not afford hiding a key.  Infants sit opposite a protagonist.  Familiarisation trials provide information that the protagonist can expect there to be two penguins in the scene at all times, one of each type; these trials also provide information that the protagonist can expect the divisible penguin to appear in its divided state. In the critical condition, the scene contains an uncovered and a covered penguin. The uncovered penguin is divisible but, because it is in the whole state, it might easily be taken to be indivisible.  The covered penguin is indivisible.  The findings suggest that infants know that the uncovered penguin is divisible but expect the protagonist to believe that the uncovered penguin is indivisible and to infer that the covered penguin is divisible.  Does this pattern of knowledge and expectation require that the infants have attributed a false belief about identity?  This is not necessary. Suppose that infants attributed the following reasoning to the protagonist: this penguin visible on my right is \textit{an} indivisible penguin; \textit{a} divisible penguin is always present; therefore there is \textit{a} divisible penguin under the cover.  This reasoning concerns only the types of objects present and does not involve identity. Yet it is sufficient (together with some further inferences about the protagonist’s goal) for success. So while Scott and Baillargeon’s (2010) findings are interesting in many respects, their implementation does not provide evidence that infants ascribe beliefs about identity.
+Scott and Baillargeon (\citeyear{en_1690}) have already conducted experiments which aim to show that 18-month-old infants are able to represent beliefs involving mistakes about `which particular object \textit{token}' another is facing rather than only about `which \textit{type} of object' is present (p.\ 1179). However, while their aim is clearly relevant, we shall show that these experiments do not succeed in testing whether infants ascribe beliefs about identity.  In essence, their paradigm involves two types of object, a divisible penguin which affords hiding a key and an indivisible penguin which lacks this affordance.  The divisible penguin has two states, divided and whole.  When whole it is visually indistinguishable from the indivisible penguin which does not afford hiding a key.  Infants sit opposite a protagonist.  Familiarisation trials provide information that the protagonist can expect there to be two penguins in the scene at all times, one of each type; these trials also provide information that the protagonist can expect the divisible penguin to appear in its divided state. In the critical condition, the scene contains an uncovered and a covered penguin. The uncovered penguin is divisible but, because it is in the whole state, it might easily be taken to be indivisible.  The covered penguin is indivisible.  The findings suggest that infants know that the uncovered penguin is divisible but expect the protagonist to believe that the uncovered penguin is indivisible and to infer that the covered penguin is divisible.  Does this pattern of knowledge and expectation require that the infants have attributed a false belief about identity?  This is not necessary. Suppose that infants attributed the following reasoning to the protagonist: this penguin visible on my right is \textit{an} indivisible penguin; \textit{a} divisible penguin is always present; therefore there is \textit{a} divisible penguin under the cover.  This reasoning concerns only the types of objects present and does not involve identity. Yet it is sufficient (together with some further inferences about the protagonists’ goal) for success. So while Scott and Baillargeon’s (2010) findings are interesting in many respects, their implementation does not provide evidence that infants ascribe beliefs about identity.
 
 In this section we have explained ways of distinguishing minimal theory of mind cognition from its full-blown counterpart.  Where subjects are able to track beliefs about identity we know they are not relying only on minimal theory of mind; and, conversely, where subjects are able to track beliefs about objects’ properties but not about identity, we can infer that they are not using full-blown theory of mind.  We next consider how  minimal theory of mind might be distinguished experimentally from strategies which involve representing nonintentional behaviour only.
 	
@@ -626,7 +623,7 @@ An obstacle to distinguishing minimal theory of mind from behavioural strategies
 
 One way to avoid the problem of the behaviour-representing demon is to set tasks involving explanation rather than prediction \citep[compare][p.\ Chapter 8]{en_167}.  Subjects observe a standard false belief scenario in which a character, Maxi, first searches for an object in the wrong location.  The test question is why Maxi searched as he did \citep[see e.g.][]{en_80, en_352}.  Where subjects’ answers include reference to incorrect registration or a related notion (which might, of course, be verbalised in terms of what an agent ‘thinks’), they have at least minimal theory of mind cognition.  Of course, this only works where subjects can be asked ‘why’ questions.
 
-For other subjects we need an indirect measure.  If subjects sometimes represent encounters or perceptions as such, then representations of others’ encounters may interfere with expectations or judgements about reality or with judgements about one’s own perceptions and beliefs \citep[so-called `altercentric interference',][]{Samson:2010jm}.  For example, representing a protagonist's encounter with an object at a particular location may interfere with expectations about the object’s actual location.  Accordingly, evidence that there is such interference when in a situation where others have different perceptions or beliefs would provide indirect evidence for theory of mind cognition (minimal or full-blown) over behavioural strategies, for such interference would be difficult to explain if subjects were representing behaviours only. Evidence showing this kind of altercentric interference has recently been found in human adults \citep[]{en_1797, Samson:2010jm}. These studies show that adults’ judgements about the number of objects they could see in a visual scene were slower and more error-prone when the scene contained an irrelevant other whose perspective was different, suggesting that another’s perspective can cause altercentric interference. 
+For other subjects we need an indirect measure.  If subjects sometimes represent encounters or perceptions as such, then representations of others’ encounters may interfere with expectations or judgements about reality or with judgements about one’s own perceptions and beliefs \citep[so-called `altercentric interference',][]{Samson:2010jm}.  For example, representing a protagonists’ encounter with an object at a particular location may interfere with expectations about the object’s actual location.  Accordingly, evidence that there is such interference when in a situation where others have different perceptions or beliefs would provide indirect evidence for theory of mind cognition (minimal or full-blown) over behavioural strategies, for such interference would be difficult to explain if subjects were representing behaviours only. Evidence showing this kind of altercentric interference has recently been found in human adults \citep[]{en_1797, Samson:2010jm}. These studies show that adults’ judgements about the number of objects they could see in a visual scene were slower and more error-prone when the scene contained an irrelevant other whose perspective was different, suggesting that another’s perspective can cause altercentric interfere. 
 
 Of course it was never in question that adults represent encounters or perceptions and not only behaviours; the relevance of these studies is that they demonstrate that altercentric interference can be used as an indirect measure for distinguishing behavioural strategies from minimal theory of mind cognition.  \citet[]{kovacs_social_2010} report evidence of possible altercentric interference in infants’ expectations about the presence of an object.  Their study suggests that infants’ surprise when their expectations about an object’s presence or absence are violated is modulated by facts about another’s expectations about that object’s location.  Infants looked for less time at the unexpected presence of an object behind a screen when another observer incorrectly expected it to be there than when the observed did not expect it to be there. These findings may be evidence of altercentric interference,%
 \footnote{
