--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -94,7 +94,7 @@ There is also relatively little evidence for the further conjecture that such re
 We shall not argue for either conjecture; they are empirical premises.  
 What follows is speculative philosophy: an attempt to explain the consequences and significance of the conjecture that social motor representation enables some joint actions.
 
-Why accept the premise that social motor representation enables joint action?
+Why even consider the premise that social motor representation enables joint action?
 A direct way to test the premise would be to 
 measure how (if at all) selective interventions on social motor representation affected agents’ performance of joint actions.
 As far as we know no one has done this and it may be impractical.
